Fix logo alignment

--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -49,7 +49,7 @@
   width: 100%;
 
   .site-nav {
-    margin-left: 0;
+    margin-left: auto;
 
     @include breakpoint($small) {
       float: right;
@@ -80,13 +80,13 @@
 }
 
 @media screen and (max-width: 600px) {
-  nav.greedy-nav {
-    display: block;
-  }
-
   .greedy-nav a:not(:first-child) {display: none;}
 
   .greedy-nav a.hamburger, .greedy-nav a.site-title {
+    display: block;
+  }
+
+  nav.greedy-nav.popdown {
     display: block;
   }
 
